--- a/css/index-style.css
+++ b/css/index-style.css
@@ -13,11 +13,11 @@
     justify-content: space-between;
     align-items: center;
     width: 500px;
-    height: 500px;
+    height: 300px;
     background-color: #fff;
     border-radius: 10px;
     box-shadow: 0px 0px 10px rgba(0,0,0,0.5);
-    transition: all 0.4s ease-in-out;
+    transition: all 5s ease-in-out;
     cursor: pointer;
     padding: 20px;
 }
@@ -31,7 +31,7 @@
 .card-title{
     font-size: 22px;
     font-weight: bold;
-    margin-bottom: 20px;
+    margin-bottom: 2px;
     text-align: center;
     text-decoration: underline;
     text-decoration-color: #fca311;
@@ -44,7 +44,7 @@
     justify-content: center;
     align-items: center;
     height: 100%;
-    padding: 20px;
+    padding: 2px 20px;
 
     color: #000;
     font-weight: 400;
