--- a/css/general-style.css
+++ b/css/general-style.css
@@ -95,8 +95,8 @@ body{
 }
 
 #top-button{
-    display: flex;
-    opacity: 0;
+    display: none;
+    opacity: 1;
     flex-direction: row;
     justify-content: center;
     align-items: center;
