--- a/css/table-style.css
+++ b/css/table-style.css
@@ -32,3 +32,21 @@ td{
     align-items: center;
     padding: 20px;
 }
+
+#filter-input{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 32px;
+    align-items: center;
+    margin-bottom: 20px;
+}
+
+#filter-input input{
+    width: 300px;
+    height: 20px;
+    border: var(--alternative-color) solid 1px;
+    border-radius: 5px;
+    padding: 10px;
+    font-size: 16px;
+}
