--- a/css/general-style.css
+++ b/css/general-style.css
@@ -14,6 +14,10 @@ body{
     margin: 0;
 }
 
+.mobile-header{
+    display:none;
+}
+
 .header{
     display: flex;
     justify-content: space-between;
@@ -35,7 +39,6 @@ body{
     display: flex;
     flex-direction: row;
     justify-content: center;
-    height: 60px;
 }
 
 .header-left a{
@@ -53,7 +56,6 @@ body{
     display: flex;
     flex-direction: row;
     justify-content: center;
-    height: 60px;
 }
 
 .header-right a{
@@ -63,13 +65,15 @@ body{
 }
 
 .header-left img {
-    max-height: 100%;
-    width: auto;
+    height: auto;
+    max-width: 65px;
+    object-fit: contain;
 }
 
 .header-right img{
     height: auto;
     max-width: 65px;
+    object-fit: contain;
     margin-bottom: 20px;
 }
 
