--- a/css/table-style.css
+++ b/css/table-style.css
@@ -43,6 +43,7 @@ td{
 }
 
 #filter-input input{
+    margin-top: 10px;
     width: 300px;
     height: 20px;
     border: var(--alternative-color) solid 1px;
