Remove blue box highlighting from top button

--- a/css/general-style.css
+++ b/css/general-style.css
@@ -106,6 +106,7 @@ body{
 }
 
 #top-button{
+    -webkit-tap-highlight-color: transparent;
     display: none;
     opacity: 1;
     flex-direction: row;
