--- a/css/index-style.css
+++ b/css/index-style.css
@@ -19,7 +19,7 @@
     box-shadow: 0px 0px 10px rgba(0,0,0,0.5);
     transition: all 2s ease-in-out;
     cursor: pointer;
-    padding: 20px;
+    padding: 20px 0px;
 }
 
 .card a{
@@ -44,7 +44,8 @@
     justify-content: center;
     align-items: center;
     height: 100%;
-    padding: 2px 20px;
+    padding: 2px 8px;
+    text-align: center;
 
     color: #000;
     font-weight: 400;
