--- a/css/mobile-style.css
+++ b/css/mobile-style.css
@@ -5,6 +5,11 @@
         --text-font-size: 12px;
     }
 
+    .header-dropdown,.header-left,.dropdown-icon{
+        width: 14%;
+        justify-content: flex-start;
+    }
+
     .header-top{
         padding: 12px 12px;
         width: auto;
