--- a/css/table-style.css
+++ b/css/table-style.css
@@ -51,3 +51,22 @@ td{
     padding: 10px;
     font-size: var(--subtitle-font-size);
 }
+
+#lesson-filter{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 32px;
+    margin-bottom: 20px;
+}
+
+#lesson-filter select{
+    margin-top: 10px;
+    width: 300px;
+    height: 20px;
+    border: var(--alternative-color) solid 1px;
+    border-radius: 5px;
+    padding: 10px;
+    font-size: var(--subtitle-font-size);
+}
