Make select on mobile smaller

--- a/css/mobile-style.css
+++ b/css/mobile-style.css
@@ -46,4 +46,14 @@
         width: 160px !important;
     }
 
+    /* Select styles */
+
+    #lesson-filter{
+        gap: 10px;
+    }
+
+    #lesson-filter select{
+        width: 50%;
+    }
+
 }
