--- a/css/index-style.css
+++ b/css/index-style.css
@@ -4,7 +4,7 @@
     align-items: center;
     flex-wrap: wrap;
     gap: 60px;
-    padding: 60px 10px;
+    padding: 60px 5vw;
 }
 
 .card{
@@ -12,12 +12,12 @@
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
-    width: 500px;
+    width: 25vw;
     height: 300px;
     background-color: #fff;
     border-radius: 10px;
     box-shadow: 0px 0px 10px rgba(0,0,0,0.5);
-    transition: all 2s ease-in-out;
+    transition: all 1s ease-in-out;
     cursor: pointer;
     padding: 20px 5px;
 }
