--- a/css/mobile-style.css
+++ b/css/mobile-style.css
@@ -3,6 +3,7 @@
         --title-font-size: 16px;
         --subtitle-font-size: 14px;
         --text-font-size: 12px;
+        --huge-font-size: 24px;
     }
 
     .header-dropdown,.header-left,.dropdown-icon{
