Size cards better in mobile

--- a/css/mobile-style.css
+++ b/css/mobile-style.css
@@ -43,8 +43,14 @@
     }
 
     .card{
-        height: auto !important;
+        height: 45vw !important;
         width: 40vw !important;
+    }
+
+    .card-content
+    {
+        padding-top: 4px !important;
+        justify-content: flex-start !important;
     }
 
     /* Select styles */
