--- a/css/index-style.css
+++ b/css/index-style.css
@@ -1,3 +1,12 @@
+@keyframes grow {
+  from {
+    transform: scale(0);
+  }
+  to {
+    transform: scale(1);
+  }
+}
+
 .main-content{
     display: flex;
     justify-content: center;
@@ -17,7 +26,7 @@
     background-color: #fff;
     border-radius: 10px;
     box-shadow: 0px 0px 10px rgba(0,0,0,0.5);
-    transition: all 1s ease-in-out;
+    animation: 1s ease-in 0s 1 grow;
     cursor: pointer;
     padding: 20px 5px;
 }
