--- a/css/warning-style.css
+++ b/css/warning-style.css
@@ -41,6 +41,8 @@ body{
     z-index: 99;
 
     backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
+    -moz-backdrop-filter: blur(10px);
 }
 
 #warning {
