--- a/css/general-style.css
+++ b/css/general-style.css
@@ -115,6 +115,47 @@ body{
     cursor:pointer;
 }
 
+#year_menu{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-left: auto;
+    padding: 0;
+    margin-top: 6px;
+}
+
+.year_div{
+    width:100%;
+    height:100%;
+    
+    display:flex;
+    justify-content: center;
+    align-items: center;
+
+    font-size: var(--title-font-size);
+    font-weight: bold;
+    color: #fff;
+
+    transition: all 0.6s;
+}
+
+.year_div:hover
+{
+    color: var(--secondary-color);
+}
+
+.year_div.is_active{
+    color: var(--secondary-color);
+}
+
+#year_indicator{
+    position: relative;
+    background-color:#fca311;
+    height: 6px;
+
+    transition: all 0.6s;
+}
+
 #top-button{
     display: none;
     opacity: 1;
