--- a/css/general-style.css
+++ b/css/general-style.css
@@ -157,6 +157,24 @@ body{
     transition: all 0.6s;
 }
 
+#year-label{
+    position: fixed;
+    top: 2%;
+    right:10%;
+    display: flex;
+    align-items: center;
+    justify-content: right;
+}
+
+#year-label h2{
+    font-size: var(--subtitle-font-size);
+    color: var(--alternative-color);
+    font-weight: 400;
+    margin:0;
+
+    transition: all 0.6s ease-in-out;
+}
+
 #top-button{
     display: none;
     opacity: 1;
