--- a/css/index-style.css
+++ b/css/index-style.css
@@ -37,14 +37,15 @@
     font-weight: bold;
 }
 
-.card-title{
+.card-title h3{
     font-size: var(--title-font-size);
     font-weight: bold;
     margin-bottom: 2px;
     text-align: center;
     text-decoration: underline;
     text-decoration-color: var(--secondary-color);
-    color: var(--primary-color)
+    color: var(--primary-color);
+    margin: 0;
 }
 
 .card-content{
