--- a/css/forum-style.css
+++ b/css/forum-style.css
@@ -62,8 +62,9 @@ textarea{
     padding-bottom: 24px;
 }
 
-#forum-posts-overflow, #forum-comments-overflow{
+#forum-posts, #forum-comments-overflow{
     height: 100%;
+    width: 100%;
     overflow-y: scroll;
     overflow-x: hidden;
 }
@@ -72,16 +73,26 @@ textarea{
     padding-bottom: 24px;
 }
 
+#forum-posts-overflow{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+}
+
 .post-card{
     cursor: pointer;
     margin: 0 10px;
     padding: 10px;
-    border-bottom: 0.8px solid var(--secondary-color);
-    width: 32vw;
+    border: var(--primary-color) solid 2px;
+    border-radius: 4px;
+    width: 80%;
 }
 
 .post-card-title{
     font-size: var(--subtitle-font-size);
+    text-decoration: underline;
+    text-decoration-color: var(--secondary-color);
     font-weight: bold;
     margin-bottom: 5px;
 }
