--- a/css/forum-style.css
+++ b/css/forum-style.css
@@ -15,6 +15,11 @@ body{
     flex-shrink: 0;
 }
 
+#footer{
+    position: sticky;
+    bottom: 0;
+}
+
 button{
     border-radius: 5px;
     border: var(--alternative-color) solid 1px;
