--- a/css/index-style.css
+++ b/css/index-style.css
@@ -19,10 +19,10 @@
 .card{
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    /* justify-content: space-between; */
     align-items: center;
-    width: 25vw;
-    height: 300px;
+    width: 20vw;
+    height: 220px;
     background-color: #fff;
     border-radius: 10px;
     box-shadow: 0px 0px 10px rgba(0,0,0,0.5);
@@ -51,8 +51,9 @@
 .card-content{
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    /* justify-content: center; */
     align-items: center;
+    margin-top: 18px;
     height: 100%;
     padding: 2px 8px;
     text-align: center;
